<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/back_iv"
            style="@style/title_bar_left"
            android:src="@drawable/white_back"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_add"
            android:textColor="#FFFFFFFF"
            android:textSize="18.5sp"
            />

        <ImageView
            android:id="@+id/customer_iv"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/icon_customer"
            android:paddingRight="9dp"
            android:paddingLeft="14dp"/>
    </RelativeLayout>

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/barcode_v"
        android:layout_below="@+id/title_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="160dp"/>

    <ListView
        android:id="@+id/ls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/adapter_sale_product"
        android:layout_weight="1">

    </ListView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFE6E6E6"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/total_amount"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textColor="#FFFF5100"
                android:textSize="15sp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/barcode_tv"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/barcode"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:background="#decb51"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/check_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settle"
                android:textColor="#FFFFFFFF"
                android:textSize="17sp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>