<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/back_iv"
            style="@style/title_bar_left"
            android:src="@drawable/white_back"/>
        <TextView
            android:id="@+id/title_tv"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_error"
            android:textColor="#FFFFFFFF"
            android:textSize="18.5sp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/state_tv"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@drawable/pay_error"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:text="@string/pay_error"/>

    <TextView
        android:id="@+id/error_tv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxLines="7"
        android:textSize="11sp"
        android:text="请截屏此页面以备查及核对单据！！！"/>
    <TextView
        android:id="@+id/retry_tv"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_shap"
        android:text="@string/retry"/>

    <TextView
        android:id="@+id/back_tv"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_shap"
        android:text="@string/back"/>
</LinearLayout>