<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="www.pospal.cn.sungivenquickcashier.MainActivity">
    <RelativeLayout
        android:id="@+id/title_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/back_iv"
            style="@style/title_bar_left"
            android:src="@drawable/white_back"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_search"
            android:textColor="#FFFFFFFF"
            android:textSize="18.5sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="150dp">

        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:background="@drawable/account"
            android:id="@+id/account" />
        <EditText
            android:id="@+id/customer_et"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_toRightOf="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_customer_num"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:background="@null"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:imeOptions="actionGo"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/scan_iv"
            android:layout_alignParentRight="true"
            android:src="@drawable/scanner_icon"
            style="@style/title_right_iv"/>
        <TextView
            android:id="@+id/customer_tv"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_marginLeft="11dp"
            android:layout_toRightOf="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="jinchangs"
            android:singleLine="true"
            android:textSize="16sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#FFCCCCCC"
        />
    <RelativeLayout
        android:layout_marginTop="100dp"
        android:layout_width="300dp"
        android:layout_height="44dp">
        <TextView
            android:id="@+id/search_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/login_btn_shap"
            android:text="@string/search"/>
        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="100dp"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/loading" />
    </RelativeLayout>

</LinearLayout>
